tests/ui/associated-types/avoid-getting-associated-items-of-undefined-trait.stderr
error[E0405]: cannot find trait `Foo` in this scope
  --> $DIR/avoid-getting-associated-items-of-undefined-trait.rs:8:22
   |
LL |     let _: dyn Tr + ?Foo<Assoc = ()>;
   |                      ^^^ not found in this scope

error[E0658]: `?Trait` is not permitted in trait object types
  --> $DIR/avoid-getting-associated-items-of-undefined-trait.rs:8:21
   |
LL |     let _: dyn Tr + ?Foo<Assoc = ()>;
   |                     ^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(more_maybe_bounds)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0405, E0658.
For more information about an error, try `rustc --explain E0405`.
